[tool.poetry]
name = "aed-data-quality"
version = "0.1.0"
description = ""
authors = ["Lucas Alves <lucasalves_taz@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.2"
pandas = "^2.2.3"
numpy = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
faker = "^36.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
commitizen = "^4.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
